--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/drawer": "^6.6.6",
@@ -16,6 +17,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
@@ -38,8 +40,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-sms-retriever": "^1.1.1",
     "react-native-web": "~0.19.6",
-    "yup": "^1.3.2",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
