--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ node_modules/
 */jspm_packages/
 jspm_packages/
 
+*/uploads
+
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
