--- a/frontend/app.json
+++ b/frontend/app.json
@@ -12,7 +12,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -20,7 +22,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.dhruvlohar.dogapp"
     },
     "web": {
       "bundler": "metro"
@@ -28,6 +34,17 @@
     "experiments": {
       "typedRoutes": true
     },
-    "plugins": ["expo-router", "expo-image-picker"]
+    "plugins": [
+      "expo-router",
+      "expo-image-picker"
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "b01f62ad-42d7-48fb-877c-8d36e9ba4d31"
+      }
+    }
   }
 }
