--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,8 @@
     "react-native-sms-retriever": "^1.1.1",
     "react-native-web": "~0.19.6",
     "yup": "^1.3.2",
-    "expo-file-system": "~15.4.4"
+    "expo-file-system": "~15.4.4",
+    "expo-dev-client": "~2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
