added size restrain and fixed release sheet

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ node_modules/
 jspm_packages/
 
 */uploads
+uploads/
+./backend/uploads
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
