--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "dog-app",
-    "slug": "dog-app",
-    "scheme": "dog-app",
+    "name": "Jeevraksha",
+    "slug": "jeevraksha",
+    "scheme": "jeevraksha",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,9 +24,15 @@
         "backgroundColor": "#ffffff"
       },
       "permissions": [
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.CAMERA",
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.RECORD_AUDIO"
       ],
-      "package": "com.dhruvlohar.dogapp"
+      "package": "com.jeevraksha"
     },
     "web": {
       "bundler": "metro"
@@ -43,7 +49,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "b01f62ad-42d7-48fb-877c-8d36e9ba4d31"
+        "projectId": "8fbd3d09-f84d-4c32-9c12-e74ef2e55e8d"
       }
     }
   }
