--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -1,19 +1,20 @@
 {
-    "build": {
-      "preview": {
-        "android": {
-          "buildType": "apk"
-        }
-      },
-      "preview2": {
-        "android": {
-          "gradleCommand": ":app:assembleRelease"
-        }
-      },
-      "development": { 
-        "developmentClient": true,
-        "distribution": "internal"
-      },
-      "production": {}
+  "cli": {
+    "version": ">= 5.9.1"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {
+      "buildType": "apk"
     }
+  },
+  "submit": { 
+    "production": {}
   }
+}
