--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,11 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.12",
+    "expo-file-system": "~15.4.4",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
@@ -40,9 +41,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-sms-retriever": "^1.1.1",
     "react-native-web": "~0.19.6",
-    "yup": "^1.3.2",
-    "expo-file-system": "~15.4.4",
-    "expo-dev-client": "~2.4.12"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
