--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -3,18 +3,25 @@
     "version": ">= 5.9.1"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
     "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
       "distribution": "internal"
     },
-    "production": {
-      "buildType": "apk"
-    }
+    "production": {}
   },
-  "submit": { 
+  "submit": {
     "production": {}
   }
 }
