--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dog-app",
+  "name": "jeevraksha",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -15,13 +15,13 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
-    "expo-file-system": "~15.4.4",
+    "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
@@ -36,7 +36,6 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^7.0.2",
-    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-sms-retriever": "^1.1.1",
