--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-sms-retriever": "^1.1.1",
     "react-native-web": "~0.19.6",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "expo-build-properties": "~0.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
