--- a/frontend/app.json
+++ b/frontend/app.json
@@ -57,8 +57,9 @@
         "origin": false
       },
       "eas": {
-        "projectId": "70a5c12c-c30d-4356-9a25-e77f43df28d4"
+        "projectId": "f5bfe967-1d38-4ef4-8d70-f90d13dc0ccc"
       }
-    }
+    },
+    "owner": "jeevraksha"
   }
 }
