--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "expo": "~49.0.15",
+    "expo-build-properties": "~0.8.3",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
@@ -36,12 +37,12 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^7.0.2",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-paper": "^5.11.4",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-sms-retriever": "^1.1.1",
-    "react-native-web": "~0.19.6",
-    "yup": "^1.3.2",
-    "expo-build-properties": "~0.8.3"
+    "react-native-web": "^0.19.9",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
