--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ jspm_packages/
 */uploads
 uploads/
 ./backend/uploads
+backend/uploads
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
