--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,8 @@
     "react-native-sms-retriever": "^1.1.1",
     "react-native-web": "^0.19.9",
     "yup": "^1.3.2",
-    "expo-splash-screen": "~0.20.5"
+    "expo-splash-screen": "~0.20.5",
+    "expo-updates": "~0.18.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
