Fixed image bug and backend spot photo rule

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "J App",
+    "name": "J App - IC",
     "slug": "jeevraksha",
     "scheme": "jeevraksha",
     "version": "1.0.0",
